<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<TextView
        android:id="@+id/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/historyCategory"
        android:textSize="18sp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/text_category"
        android:layout_below="@id/text_category"
        android:textColor="#FFFFFF"
        android:text="@string/historyDate" 
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="7dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/historyAmount"
        android:textSize="18sp"
        android:layout_marginRight="10dp" />

</RelativeLayout>
